# agent-audiobook-maker

./: .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  CONTEXT.md  CONTRIBUTING.md  Dockerfile  EMOJI_TEST.md  GITHUB_MERMAID_DETECTION_TEST.md  LICENSE  MERMAID_TEST.md  Makefile  README.md  alembic.ini  clean_mermaid.sh  docker-compose.yml  fix_mermaid.sh  justfile  pymarkdown.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements-parler-cpu.txt  requirements-parler-cu121.txt  requirements.txt
.VSCodeCounter/2025-08-28_00-31-18/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.githooks/: pre-push
.github/: COPILOT_GUARDRAILS.md  COPILOT_ROUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.yml  backlog-seeds.md  ci-self-hosted-runner.md  feature.yml
.github/workflows/: branch-and-pr-guardrails.yml  ci.yml  codeql.yml  integration-tests.yml  project-automation.yml  project-backfill.yml  quality-gate.yml  seed-pack.yml  seedpack-latest.yml  unit-tests.yml
.venv311/: pyvenv.cfg
alembic/: env.py  script.py.mako
alembic/versions/: e1123e186133_init.py
character_bible/: Makefile
components/helpers/: __init__.py  master_example.py
configs/: base.yaml  dev-cpu.yaml  dev-gpu.yaml
data/: README.TODO.md
data/voices/: audit.json  mvs_parler_profiles.yaml  parler_catalog.yaml  private_book_cast.yaml  profiles.yml
database/init/: 01-init-schema.sql
docs/: ANNOTATION_SCHEMA.md  ARCHITECTURE.md  CONTEXT.md  DEVELOPMENT_JOURNEY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  GETTING_STARTED.md  GETTING_STARTED_LINUX.md  INGESTION_PIPELINE_V2.md  INGESTION_V2_INTEGRATION_CHECKLIST.md  KISS.md  LANGFLOW_COMPONENT_SUCCESS_CLEAN.md  LANGFLOW_CONNECTIONS_GUIDE.md  LANGFLOW_LESSONS_LEARNED.md  LANGFLOW_PIPELINE.md  LANGFLOW_STATUS_UPDATE.md  LEARNING_PATH_MULTI_AGENT.md  LESSONS_LEARNED.md  MULTI_AGENT_ROADMAP.md  MVP_PLAN.md  MVP_SPECIFICATION.md  PDF_TO_TEXT_CLI_SPEC.md  PROGRESS_UPDATE_2025_08_23.md  README.md  SECTION_CLASSIFIER_SPEC.md  STRUCTURED_JSON_SCHEMA.md  TXT_TO_JSON_SPEC.md
docs/01-project-overview/: ARCHITECTURE.md  ARCHITECTURE_FIXED.md  CONTEXT.md  KISS.md  README.md  VISION.md  VISION_REDESIGN.md
docs/02-specifications/: MVP_REDESIGN.md  README.md
docs/03-implementation/: README.md
docs/04-diagrams/: README.md  spans_confidence_pipeline.mmd  spans_confidence_pipeline_compat.mmd
docs/05-development/: DEPENDENCIES.md  GITHUB_ACTIONS_RUNBOOK.md  GITHUB_PROJECTS_POLICY.md  README.md  REDACTION.md  new_model_onboarding.md  pauses_and_padding.md
docs/06-appendices/: GLOSSARY.md  README.md  REFERENCES.md  TROUBLESHOOTING.md
docs/_deprecated/: two-agent-dialogue-speaker-system.md
docs/chat_seed/: 03-pipelines.md  BOOTSTRAP.md  CHAT_SEED_FULL.md  CHAT_SEED_MIN.md
docs/context_seed/: clis.json  components.json  dependencies.json  manifest.json  pipelines.json  repo_map.json  schemas_index.json
docs/diagrams/: abm_spans_first_attribution.mmd  c4_ingestion_component.mmd  c4_langflow_container.mmd  c4_system_overview.mmd  high_level_architecture.mmd  langflow-two-agent-pipeline.mmd  langflow_architecture.mmd  langflow_components_flow.mmd  langflow_fsm.mmd  langflow_uml.mmd  multi_agent_c4_component.mmd  multi_agent_c4_container.mmd  multi_agent_c4_context.mmd  multi_agent_sequence.mmd  pdf_to_text_uml.mmd  section_classifier.mmd  stage_b_llm_refine_c4_container.mmd  (+3 more)
examples/: profiles.example.yml
lf_components/: README.md  __init__.py  chapter_selector.py  chapter_volume_loader.py  payload_logger.py  segment_dialogue_narration.py  utterance_filter.py  utterance_jsonl_writer.py
notebook/: dataviews.ipynb
output/: utterances.jsonl
scripts/: activate_dev.sh  album_normalize_and_package.py  audition_piper_model.py  banned_token_scan.sh  bulk_render_kokoro.py  check_docs_links.py  check_no_src_imports.sh  clean_artifacts.sh  clean_ingest_artifacts.py  clean_whitespace.py  convert_plans_to_kokoro.py  count_unknown_speakers.py  create_project_backup.sh  demo_confidence_orchestrator.py  fix_mermaid_comments.py  fix_mmd_files.py  force_tabs_to_spaces.py  generate_sample_pdf.py  generate_seed_pack.py  generate_synthetic_sample_pdf.py  history_scrub_replace.py  import_segments_flow.sh  ingest_nodb.py  install_git_hooks.sh  install_piper_voice.sh  install_piper_voices.sh  install_piper_voices_all.sh  langflow_curl_example.sh  langflow_start_bg.sh  langflow_stop.sh  make_chat_seed.py  make_kokoro_plans_from_annotations.py  make_script_from_annotations.py  method_confidence_distribution.py  pdf_to_book_json.py  post_process_plan_padding.py  pre_push.sh  prevent_private_data.sh  production_run.sh  qc_grade.py  (+19 more)
seed_pack/: README.md  index.json  pipelines.json  schemas_index.json
src/: __init__.py  abm_two_agent_runner.py  core.py  logging_setup.py
template/: pyproject.toml  pyrightconfig.json
tests/: __init__.py  conftest.py  test_assembly_and_mastering.py  test_audit_cli.py  test_audit_metrics_eval.py  test_book_config.py  test_cache_keys.py  test_casting_router.py  test_concat_and_qc.py  test_engine_registration.py  test_examples_flow_exists.py  test_langflow_components_import.py  test_master_example.py  test_mastering_truepeak.py  test_mermaid_syntax.py  test_mermaid_validation.py  test_packaging.py  test_packaging_m4b_chapters.py  test_parler_engine.py  test_piper_adapter.py  test_piper_engine.py  test_plan_from_annotations.py  test_profiles_and_casting.py  test_profiles_cli.py  test_profiles_loader.py  test_profiles_parler.py  test_render_book_and_packaging.py  test_render_chapter.py  test_report_md.py  test_speaker_confusion.py  test_synthesis_export.py  test_text_normalizer.py  test_tts_manager.py  test_vote_metrics.py  test_xtts_adapter.py
tools/: abm_two_agent.flow.json  abm_two_agent_full.flow.json  bootstrap_project.sh  mon_fallback.py  monitor_stageA.sh  orchestrator_confidence.flow.json  run_flow.py  sample_master_example.flow.json  seed_issues.sh  spans_first_confidence.flow.json
(+757 files in other folders)
