[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-audiobook-maker"
version = "0.1.0"
description = "Local-first audiobook maker tooling (PDF→TXT→JSON→Structured JSON)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "jon" }]
license = { file = "LICENSE" }
keywords = ["audiobook", "pdf", "tts", "langgraph", "crewai"]

# Feature-scoped optional dependencies (install with: pip install .[group])
[project.optional-dependencies]
coref = [
	"fastcoref>=2.1.7",
]
spacy-trf = [
	"spacy-transformers>=1.3,<1.4",
]
ui = [
	"rich>=13.7",
	"tqdm>=4.66",
]
metrics = [
	"psutil>=5.9",
	"pynvml>=11.5",
]
db = [
	"psycopg[binary]==3.1.9",
]
booknlp = [
	"booknlp>=1.0; python_version >= '3.10'",
]
tts = [
	"TTS>=0.22.0",
]
# Convenience meta-extras
all-optional = [
	"agent-audiobook-maker[coref,spacy-trf,ui,metrics,db,booknlp,tts]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["abm*"]

[tool.ruff]
line-length = 120
target-version = "py311"
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PIE", "TID", "PERF"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict = true
packages = ["abm"]
# Third-party stubs may be missing; allow imports without stubs.
ignore_missing_imports = false
# Use explicit package bases for src layout to avoid duplicate module mapping
explicit_package_bases = true
# Point mypy to the src/ layout so local packages (abm) resolve
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["fitz", "psycopg", "psycopg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["abm.classifier.classifier_cli"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = ["default"]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-private = false
ignore-magic = false
ignore-property-decorators = false
fail-under = 100
exclude = [".venv", "tests", "docs", "scripts"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
style = "google"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
	"src/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = [
	"src/**/__init__.py",
]
